--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
         <div class="container header-section flex">
             <div class="header-left">
              <h1>Design Confidently.</h1>
-             <p>Jsability hub is a remote user research platform that takes
+             <p>Usabilityhub is a remote user research platform that takes
                 the guesswork out of design decision by validating them width
                 real users.
              </p>
